microservice/emailservice-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: emailservice-canary
  labels:
    app: emailservice
spec:
  type: ClusterIP
  selector:
    app: emailservice
  ports:
  - name: grpc
    port: 5000
    targetPort: 8080
