microservice/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: emailservice-vs
spec:
  hosts:
    - emailservice  # or whatever your host is (e.g. emailservice.default.svc.cluster.local)
  http:
    - name: primary
      route:
        - destination:
            host: emailservice
          weight: 100
